<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    tools:context=".constraints">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="226dp"
        android:text="@string/no" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignTop="@+id/textView"
        android:text="@string/ring" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/done" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="65dp"
        android:layout_height="44dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-17dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="85dp"
        android:text="@string/leave" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginEnd="40dp"
        android:text="@string/time" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="206dp"
        android:layout_height="168dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/bell" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="92dp"
        android:layout_height="102dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="129dp"
        android:contentDescription="@string/button14"
        app:srcCompat="@drawable/bag" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="104dp"
        android:layout_height="115dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imageView5"
        android:layout_marginEnd="27dp"
        android:contentDescription="@string/button3"
        app:srcCompat="@drawable/clock" />
</RelativeLayout>