<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/t4"
        android:layout_width="292dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/textview5"
        android:textSize="30sp" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:text="@string/button1"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/e2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/t4"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="enter the otp values"
        android:inputType="number"
        android:maxLength="4"
        android:text="@string/edittext2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="169dp"
        android:width="45dp"
        android:text="@string/textview"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="188dp"
        android:text="@string/textview6"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="148dp"
        android:layout_marginTop="217dp"
        android:text="@string/textview7"
        android:textSize="24sp" />
</RelativeLayout>