<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chooselocality">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="201dp"
        android:layout_height="132dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="77dp"
        android:layout_marginTop="125dp"
        android:contentDescription="@string/imageview2"
        app:srcCompat="@drawable/places" />

    <TextView
        android:id="@+id/t10"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/edittext7"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/t11"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/e7"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:text="@string/textview11" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginBottom="210dp"
        android:contentDescription="@string/edittext6"
        android:ems="10"
        android:hint="enter your city"
        android:inputType="textPersonName"
        android:text="@string/edittext6" />

    <TextView
        android:id="@+id/t12"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:text="@string/textview12"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/t12"
        android:layout_marginBottom="166dp"
        android:text="@string/textview10"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/e7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginBottom="98dp"
        android:contentDescription="@string/edittext7"
        android:ems="10"
        android:hint="choose your locality"
        android:inputType="textPersonName"
        android:text="@string/edittext6" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="133dp"
        android:text="@string/button3"
        android:textSize="18sp" />

</RelativeLayout>