<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    tools:context=".milk">

    <SearchView
        android:id="@+id/s3"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="6dp">

    </SearchView>

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button5"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b5"
        android:layout_toEndOf="@+id/b8"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button6"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:layout_toRightOf="@+id/b8" />

    <Button
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/b5"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button7"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b9"
        android:layout_toStartOf="@+id/t17"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button8"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:layout_toLeftOf="@+id/t17" />

    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="63dp"
        android:layout_marginTop="205dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button9"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:layout_marginRight="63dp"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/t15"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="76dp"
        android:background="#f32c2c"
        android:text="@string/textview15"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/t16"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_alignEnd="@+id/b8"
        android:layout_alignTop="@+id/t15"
        android:background="@android:color/holo_red_light"
        android:text="@string/textview16"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_alignRight="@+id/b8" />

    <TextView
        android:id="@+id/t17"
        android:layout_width="112dp"
        android:layout_height="54dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/t15"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:text="@string/textview17"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:background="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/t18"
        android:layout_width="114dp"
        android:layout_height="54dp"
        android:layout_alignEnd="@+id/b7"
        android:layout_alignRight="@+id/b7"
        android:layout_alignTop="@+id/t15"
        android:layout_marginEnd="-15dp"
        android:layout_marginRight="-15dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/textview18"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/t14"
        android:layout_width="326dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:text="@string/textview14"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/t19"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="203dp"
        android:text="@string/textview19"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/t20"
        android:layout_width="209dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="156dp"
        android:text="@string/textview20"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/t21"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="106dp"
        android:text="@string/textview21"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="164dp"
        android:layout_height="144dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/t19"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/milkbottle"
        android:layout_alignParentRight="true" />

    <ImageButton
        android:id="@+id/iv4"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:background="@android:color/black"
        app:srcCompat="@android:drawable/ic_media_next"
        android:layout_alignParentRight="true" />

</RelativeLayout>