<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b16"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    tools:context=".schedule">

    <RadioGroup
        android:layout_width="199dp"
        android:layout_height="121dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="253dp">

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton3"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton5"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </RadioGroup>

    <TextView
        android:id="@+id/t40"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/textview40"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="107dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/button15"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="84dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b15"
        android:layout_toEndOf="@+id/b15"
        android:background="@android:color/holo_red_light"
        android:text="@string/Button16"
        android:layout_toRightOf="@+id/b15" />

    <Button
        android:id="@+id/b17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/button17" />

</RelativeLayout>